improve swagger spec
